trigger task with equipment id and workstation id
