# src/controller_app/task/controllers.py
@@ -3,7 +3,7 @@ import logging
 from datetime import datetime
 
 from dateutil.tz import tzlocal
-from flask import Blueprint, jsonify, abort, current_app
+from flask import Blueprint, jsonify, abort, current_app, request
 # import paho.mqtt.client as mqtt
 from kafka import KafkaProducer
 
@@ -11,101 +11,146 @@ from .models import Task, TaskType, TaskStatus
 from ..database import db
 from ..factory.models import Factory
 from ..workstation.models import WorkStation
+from ..equipment.models import Equipment
 
 task_bp = Blueprint("task", __name__)
 
 logger = logging.getLogger(__name__)
 
 
-@task_bp.route("task/equipment/<int:equipment_id>", methods=["GET"])
+@task_bp.route("task/equipment/equipment/<int:equipment_id>", methods=["POST"])
 def add_equipment_task(equipment_id: int):
-    equipment =
-
-
-@task_bp.route("/task/equipment/factory/<int:factory_id>", methods=["POST"])
-def add_equipment_task(factory_id: int):
-    factory = Factory.query.get_or_404(factory_id)
-    # client = mqtt.Client(client_id="")
-    # client.username_pw_set(username=current_app.config.get("MQTT_USER"),
-    #                        password=current_app.config.get("MQTT_PWD"))
-    # client.connect(host=current_app.config.get("MQTT_HOST"),
-    #                port=current_app.config.get("MQTT_PORT"))
-
-    payload = {"factoryId": factory_id,
-               "datetime": datetime.now(tz=tzlocal()).strftime(format="%Y-%m-%dT%H:%M:%S%z")}
-    payload = json.dumps(payload)
+    body = request.get_json()
+    deadline = body.get("deadline")
     try:
-        # push = client.publish(topic="task/equipment", payload=payload)
-        # push_code, _= mqtt.publish(topic="task/equipment", payload=payload)
+        deadline = datetime.strptime(deadline, "%Y-%m-%dT%H:%M:%S")
+    except (TypeError, ValueError) as e:
+        logger.exception(e)
+        abort(400, "deadline not provided or not in %Y-%m-%dT%H:%M:%S format")
+
+    equipment = Equipment.query.get_or_404(equipment_id)
+
+    if equipment.equipment_camera is None:
+        abort(400, "no camera is registered for this equipment for checking existence")
+    payload = {"equipmentId": equipment_id, "deadline": deadline.strftime(format="%Y-%m-%dT%H:%M:%S")}
+    payload = json.dumps(payload)
+
+    task = Task(type=TaskType.equipment,
+                create_time=datetime.now(tz=tzlocal()),
+                context=payload,
+                deadline = deadline,
+                status=TaskStatus.created)
+
+    try:
+        db.session.add(task)
+    except Exception as e:
+        logger.exception(e)
+        abort(500, "database write error")
+
+    try:
         producer = KafkaProducer(bootstrap_servers=current_app.config.get("KAFKA_SERVER"))
         producer.send(topic="equipment", value=payload.encode())
         producer.close()
     except Exception as e:
         logger.error(e, exc_info=True)
+        db.session.rollback()
         abort(500, "mq publish failed")
-    # finally:
-    #     client.disconnect()
+    else:
+        db.session.commit()
+        return jsonify(task.dict)
 
-    # if push_code != 0:
-    #     abort(500, "mqtt publish failed")
-    # else:
-    #     task = Task(type=TaskType.equipment,
-    #                 create_time=datetime.now(tz=tzlocal()),
-    #                 context=payload,
-    #                 status=TaskStatus.created)
-    #     db.session.add(task)
-    #     db.session.commit()
-    #     return jsonify(task.dict)
-    task = Task(type=TaskType.equipment,
+
+@task_bp.route("task/equipment_active/equipment/<int:equipment_id>", methods=["POST"])
+def add_equipment_active_task(equipment_id: int):
+    body = request.get_json()
+    deadline = body.get("deadline")
+    try:
+        deadline = datetime.strptime(deadline, "%Y-%m-%dT%H:%M:%S")
+    except (TypeError, ValueError) as e:
+        logger.exception(e)
+        abort(400, "deadline not provided or not in %Y-%m-%dT%H:%M:%S format")
+
+    equipment = Equipment.query.get_or_404(equipment_id)
+
+    if equipment.equipment_active_camera is None:
+        abort(400, "no camera is registered for this equipment for checking existence")
+    payload = {"equipmentId": equipment_id, "deadline": deadline.strftime(format="%Y-%m-%dT%H:%M:%S")}
+    payload = json.dumps(payload)
+
+    task = Task(type=TaskType.equipment_active,
                 create_time=datetime.now(tz=tzlocal()),
                 context=payload,
+                deadline=deadline,
                 status=TaskStatus.created)
-    db.session.add(task)
-    db.session.commit()
-    return jsonify(task.dict)
 
-
-@task_bp.route("/task/keyperson/workstation/<int:workstation_id>", methods=["POST"])
-def add_keyperson_task(workstation_id: int):
-    workstation = WorkStation.query.get_or_404(workstation_id)
-    # client = mqtt.Client(client_id="")
-    # client.username_pw_set(username=current_app.config.get("MQTT_USER"),
-    #                        password=current_app.config.get("MQTT_PWD"))
-    # client.connect(host=current_app.config.get("MQTT_HOST"),
-    #                port=current_app.config.get("MQTT_PORT"))
-
-    payload = {"workstationId": workstation_id,
-               "datetime": datetime.now(tz=tzlocal()).strftime(format="%Y-%m-%dT%H:%M:%S%z")}
-    payload = json.dumps(payload)
     try:
-        # push_code, _ = mqtt.publish(topic="task/keyperson", payload=payload)
-        # push = client.publish(topic="task/keyperson", payload=payload)
+        db.session.add(task)
+    except Exception as e:
+        logger.exception(e)
+        abort(500, "database write error")
+
+    try:
+        producer = KafkaProducer(bootstrap_servers=current_app.config.get("KAFKA_SERVER"))
+        producer.send(topic="equipment_active", value=payload.encode())
+        producer.close()
+    except Exception as e:
+        logger.error(e, exc_info=True)
+        db.session.rollback()
+        abort(500, "mq publish failed")
+    else:
+        db.session.commit()
+        return jsonify(task.dict)
+
+
+@task_bp.route("task/keyperson/workstation/<int:workstation_id>", methods=["POST"])
+def add_equipment_active_task(workstation_id: int):
+    body = request.get_json()
+    deadline = body.get("deadline")
+    duration = body.get("duration")
+
+    try:
+        deadline = datetime.strptime(deadline, "%Y-%m-%dT%H:%M:%S")
+    except (TypeError, ValueError) as e:
+        logger.exception(e)
+        abort(400, "deadline not provided or not in %Y-%m-%dT%H:%M:%S format")
+
+    if not isinstance(duration, int):
+        abort(400, "task duration not provided or is not integer")
+
+    workstation = WorkStation.query.get_or_404(workstation_id)
+
+    if workstation.camera is None:
+        abort(400, "no camera is registered for this workstation for checking existence")
+    payload = {
+        "workstationId": workstation_id,
+        "deadline": deadline.strftime(format="%Y-%m-%dT%H:%M:%S"),
+        "duration": duration
+    }
+    payload = json.dumps(payload)
+
+    task = Task(type=TaskType.keyperson,
+                create_time=datetime.now(tz=tzlocal()),
+                context=payload,
+                deadline=deadline,
+                status=TaskStatus.created)
+
+    try:
+        db.session.add(task)
+    except Exception as e:
+        logger.exception(e)
+        abort(500, "database write error")
+
+    try:
         producer = KafkaProducer(bootstrap_servers=current_app.config.get("KAFKA_SERVER"))
         producer.send(topic="keyperson", value=payload.encode())
         producer.close()
     except Exception as e:
         logger.error(e, exc_info=True)
-        abort(500, "mqtt publish failed")
-    # finally:
-    #     client.disconnect()
-
-    # if push_code != 0:
-    #     abort(500, "mqtt publish failed")
-    # else:
-    #     task = Task(type=TaskType.face,
-    #                 create_time=datetime.now(tz=tzlocal()),
-    #                 context=payload,
-    #                 status=TaskStatus.created)
-    #     db.session.add(task)
-    #     db.session.commit()
-    #     return jsonify(task.dict)
-    task = Task(type=TaskType.face,
-                create_time=datetime.now(tz=tzlocal()),
-                context=payload,
-                status=TaskStatus.created)
-    db.session.add(task)
-    db.session.commit()
-    return jsonify(task.dict)
+        db.session.rollback()
+        abort(500, "mq publish failed")
+    else:
+        db.session.commit()
+        return jsonify(task.dict)
 
 
 @task_bp.route("/task/<int:task_id>", methods=["GET"])
